# Practice-OpenCV

./: .gitignore  README.md  ReviewOpenCV.sln
3-imageproc-module/3.4-ImagePyramids/: 3.4-ImagePyramids.vcxproj  main.cpp
3-imageproc-module/3.5-BasicThresholding/: 3.5-BasicThresholding.vcxproj  Main.cpp
3-imageproc-module/3.6-OwnLinearFilter/: 3.6-OwnLinearFilter.vcxproj  Main.cpp
3-imageproc-module/3.7-AddingBorders/: 3.7-AddingBorders.vcxproj  main.cpp
3.4-ImagePyramids/: 3.4-ImagePyramids.vcxproj  main.cpp
6-feature2d-module/6.1-FeatureDiscription/: 6.1-FeatureDiscription.vcxproj  main.cpp
6-feature2d-module/6.2-Harris-corner-detector/: 6.2-Harris-corner-detector.vcxproj  main.cpp
6-feature2d-module/6.3-Feature_matching-with-FLANN/: CMakeLists.txt  main.cpp
6-feature2d-module/6.4-Features2D-Homography-to-find-known-object/: CMakeLists.txt  main.cpp
6-feature2d-module/6.5-shi-tomasi-corner-detector/: CMakeLists.txt  main.cpp
6-feature2d-module/6.6-create-your-own-corner-detector/: CMakeLists.txt  main.cpp
6-feature2d-module/6.7-detect-corner-location-subpixeles/: CMakeLists.txt  main.cpp
6-feature2d-module/TestORBFeature/: TestORBFeature.vcxproj  main.cpp
8-ObjectDetectModule/CascadeCalssifier/: CMakeLists.txt  (+1 more)
BasicMorphologyOperation/: BasicMorphologyOperation.vcxproj  BasicMorphologyOperation.vcxproj.filters  main.cpp
BasicThresholdingOperation/: BasicThresholdingOperation.vcxproj  main.cpp
CaptureVideo/: CaptureVideo.vcxproj  Main.cpp
Filter/: Filter.vcxproj  Filter.vcxproj.filters  Main.cpp
FindContours/: FindContours.vcxproj  main.cpp
KNN/: KNN.vcxproj  Main.cpp
Linux/FileInputAndOutput/: CMakeLists.txt  README.md  main.cpp
Linux/avi2ImageList/: CMakeLists.txt  main.cpp
Linux/lkdemo/: CMakeLists.txt  lk.cpp  lkdemo.cpp
LocalEntory/: LocalEntory.vcxproj  main.cpp
MoreMorphologyOperation/: MoreMorphologyOperation.vcxproj  main.cpp
Props/: OpenCV2413CompiledBy2017Debug64.props  OpenCV2413CompiledBy2017Release64.props
ROI/: Main.cpp  PerformanceUtil.hpp  ROI.vcxproj  ROI.vcxproj.filters
SmoothingImage/: SmoothingImage.vcxproj  SmoothingImage.vcxproj.filters  main.cpp
(+7 files in other folders)
